[FIX] 불변 리스트 대신 가변 리스트를 반환하도록 수정